--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -1,8 +1,13 @@
 $-color-black: rgb(0, 0, 0);
 $-color-grey: rgb(80, 80, 80);
 $-color-grey-dark: rgb(40, 40, 40);
+$-color-red: rgb(155, 25, 25);
 $-color-transparent: rgba(0, 0, 0, 0);
+$-color-white: rgb(255, 255, 255);
 
 $color-nav-link: $-color-grey;
 $color-nav-link-underline: $-color-transparent;
 $color-nav-link-active: $-color-black;
+$color-fight-link-text: $-color-white;
+$color-fight-link-grad-start: $-color-red;
+$color-fight-link-grad-end: $-color-grey-dark;
