Improve component structure
Signed-off-by: Michael Darr <michael.e.darr@gmail.com>

--- a/frontend/src/components/combat-simulator/CombatSimulator.scss
+++ b/frontend/src/components/combat-simulator/CombatSimulator.scss
@@ -1,6 +1,6 @@
 .combat-simulator {
     display: flex;
-    justify-content: space-around;
+    align-content: stretch;
     padding-top: 3em;
     width: 100%;
 }
