--- a/frontend/src/components/combat-simulator/CombatExecutor.scss
+++ b/frontend/src/components/combat-simulator/CombatExecutor.scss
@@ -1,8 +1,19 @@
-.combat-log {
-    width: 100%;
-    text-align: left;
-    background: black;
-    color: white;
-    padding: 1em;
-    margin-top: 1em;
+.combat-executor {
+    display: flex;
+    align-content: stretch;
+    flex-direction: column;
+    flex-basis: 50%;
+    padding: 2em;
+
+    .combat-log {
+        text-align: left;
+        background: black;
+        color: white;
+        padding: 1em;
+        margin-top: 1em;
+    }
+
+    .fight-button-container {
+        text-align: center;
+    }
 }
