--- a/frontend/src/components/combat-simulator/PlayerInfo.scss
+++ b/frontend/src/components/combat-simulator/PlayerInfo.scss
@@ -7,7 +7,7 @@
         font-size: 2rem;
     }
 
-    .player-info-input {
+    label {
         display: flex;
         flex-direction: column;
         font-weight: 800;
