--- a/frontend/src/components/combat-simulator/CombatExecutor.scss
+++ b/frontend/src/components/combat-simulator/CombatExecutor.scss
@@ -3,13 +3,14 @@
     align-content: stretch;
     flex-direction: column;
     flex-basis: 50%;
-    padding: 2em;
+    padding: 0 2em;
 
     .combat-log {
+        flex-grow: 1;
         text-align: left;
         background: black;
         color: white;
-        padding: 1em;
+        padding: 0 1em;
         margin-top: 1em;
     }
 
