--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -5,7 +5,7 @@ $-color-red: rgb(155, 25, 25);
 $-color-transparent: rgba(0, 0, 0, 0);
 $-color-white: rgb(255, 255, 255);
 
-$color-nav-link: $-color-grey;
+$color-nav-link: $-color-grey-dark;
 $color-nav-link-underline: $-color-transparent;
 $color-nav-link-active: $-color-black;
 $color-fight-link-text: $-color-white;
